# py_counts_this_isnt_me

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/py_counts_this_isnt_me/: __init__.py  plotting_this_isnt_me.py  py_counts_this_isnt_me.py
tests/: test_py_counts_this_isnt_me.py
