[tool.poetry]
name = "py_counts_this_isnt_me"
version = "0.1.0"
description = "Count words in text file - learning package"
authors = ["this-isnt-me"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
